room, экран с описанием слова, поиск слова в истории запросов

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="error_textview_stub">Error</string>
     <string name="reload_button">Reload</string>
     <string name="undefined_error">Undefined error</string>
-    <string name="empty_server_response_on_success">Response from server is empty</string>
+    <string name="empty_server_response_on_success">Response is empty</string>
     <string name="button_search">Search</string>
     <string name="search_hint">New word</string>
     <string name="delete_description">X</string>
@@ -13,4 +13,10 @@
     </string>
     <string name="dialog_button_cancel">Cancel</string>
     <string name="dialog_title_stub">Undefined error</string>
+    <string name="dialog_tittle_sorry">Sorry</string>
+    <string name="menu_title_history">History</string>
+    <string name="error_stub">Error</string>
+    <string name="image_stub">image</string>
+    <string name="search_in_history">Поиск в истории</string>
+    <string name="not_found_in_history">Слово не найдено в истории</string>
 </resources>
