--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="dialog_message_device_is_offline">You can not use app without internet connection. Please, check
         internet connection.
     </string>
-    <string name="dialog_button_cancel">Cancel</string>
-    <string name="dialog_title_stub">Undefined error</string>
+    <!--<string name="dialog_button_cancel">Cancel</string>
+    <string name="dialog_title_stub">Undefined error</string>-->
     <string name="dialog_tittle_sorry">Sorry</string>
     <string name="menu_title_history">History</string>
     <string name="error_stub">Error</string>
